--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yxzq-utils-node",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "dist-cjs/index.js",
   "module": "dist-esm/index.js",
   "type": "module",
@@ -14,13 +14,12 @@
     ".": {
       "import": "./dist-esm/index.js",
       "require": "./dist-cjs/index.js",
-      "types":"./dist/index.d.ts"
+      "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build": "npm run build:cjs && npm run build:esm"
+    "clean": "rimraf dist dist-cjs dist-esm",
+    "build": "npm run clean && rollup -c"
   },
   "keywords": [
     "yxzq",
@@ -41,6 +40,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.28.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.7.2"
   }
 }
