--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yxzq-utils-node",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "dist-cjs/index.js",
   "module": "dist-esm/index.js",
   "type": "module",
@@ -13,7 +13,7 @@
   "exports": {
     ".": {
       "import": "./dist-esm/index.js",
-      "require": "./dist-cjs/index.js",
+      "require": "./dist-cjs/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
