--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "yxzq-utils-node",
-  "version": "1.1.2",
-  "main": "dist-cjs/index.js",
-  "module": "dist-esm/index.js",
+  "version": "1.2.0",
+  "main": "dist/dist-cjs/index.cjs",
+  "module": "dist/dist-esm/index.js",
   "type": "module",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "files": [
-    "dist-cjs/",
-    "dist-esm/"
+    "dist/"
   ],
   "exports": {
     ".": {
-      "import": "./dist-esm/index.js",
-      "require": "./dist-cjs/index.cjs",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/dist-esm/index.js",
+      "require": "./dist/dist-cjs/index.cjs",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
